[project]
name = "map-utils-xethhung12"
version = "0.0.1"
authors = [
  { name="Xeth Hung", email="admin@xethh.me" },
]
description = "A small package with maps related utils"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"