[project]
name = "map-utils-xethhung12"
version = "0.4.1"
description = "A small package with maps related utils"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "requests", "beautifulsoup4", "pyjsparser", "pyyaml", "tzdata",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.urls]
Homepage = "https://github.com/xh-dev-py/map-utils-xethhung12"
Issues = "https://github.com/xh-dev-py/map-utils-xethhung12/issues"
